dataset1235/2025-2/610742602/users/2183191739/executions/906907063_146336312.log
== SUBMISSION (2025-08-19 21:06:38)
-- CODE: 
print(50//3)
print(50%3)         
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:05:25)
-- CODE: 
print(50//3)
print(50/3-16)         
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0.6666666666666679
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
0.6666666666666679
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:00:42)
-- CODE: 
print(round(50/3,0)
        
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 1
    print(round(50/3,0)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 1
    print(round(50/3,0)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:04:59)
-- CODE: 
x=print(50//3)
print(50/3-50)         
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
-33.33333333333333
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
-33.33333333333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:03:53)
-- CODE: 
print(50//3)
print([50/3]-[50//3])         
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print([50/3]-[50//3])         
          ~~~~~~^~~~~~~~
TypeError: unsupported operand type(s) for -: 'list' and 'list'
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print([50/3]-[50//3])         
          ~~~~~~^~~~~~~~
TypeError: unsupported operand type(s) for -: 'list' and 'list'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:05:06)
-- CODE: 
x=print(50//3)
print(50/3-16)         
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0.6666666666666679
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
0.6666666666666679
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:04:40)
-- CODE: 
x=print(50//3)
print(50/3-x)         
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(50/3-x)         
          ~~~~^~
TypeError: unsupported operand type(s) for -: 'float' and 'NoneType'
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(50/3-x)         
          ~~~~^~
TypeError: unsupported operand type(s) for -: 'float' and 'NoneType'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:02:34)
-- CODE: 
print(50//3)
print((50/3)-(50//3))         
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0.6666666666666679
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
0.6666666666666679
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:05:04)
-- CODE: 
x=print(50//3)
print(50/3-16)         
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0.6666666666666679
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
0.6666666666666679
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:03:02)
-- CODE: 
print(50//3)
print(50/3-50//3)         
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0.6666666666666679
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
0.6666666666666679
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:04:05)
-- CODE: 
print(50//3)
print(50/3-50//3)         
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0.6666666666666679
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
0.6666666666666679
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
